--- a/plotRIXS.ipynb
+++ b/plotRIXS.ipynb
@@ -41,7 +41,7 @@
     "    elif scannumber < 1000:    \n",
     "        filename = base+\"_\"+\"0\"+str(scannumber)\n",
     "    else:    \n",
-    "        filename = mypath+base+\"_\"+str(scannumber)\n",
+    "        filename = base+\"_\"+str(scannumber)\n",
     "\n",
     "    f1 = h5py.File(inputFilePath+filename+\"_d1.h5\", 'r')\n",
     "    f2 = h5py.File(inputFilePath+filename+\"_d2.h5\", 'r')\n",
