--- a/ConvertData.ipynb
+++ b/ConvertData.ipynb
@@ -11,7 +11,7 @@
     "import h5py\n",
     "import numpy as np\n",
     "# import matplotlib.pyplot as plt\n",
-    "# from scipy.signal import find_peaks\n",
+    "from scipy.signal import find_peaks\n",
     "# from scipy.optimize import curve_fit\n",
     "\n",
     "inputFilePath = 'X:\\\\RIXS\\\\Ruiz_e18603\\\\RIXS\\\\'\n",
@@ -52,22 +52,34 @@
     "    ccd1 = f1['entry']['analysis']['spectrum'][()]\n",
     "    ccd2 = f2['entry']['analysis']['spectrum'][()]\n",
     "    ccd3 = f3['entry']['analysis']['spectrum'][()]\n",
+    "       \n",
+    "    [xdata,data1] = elasticShift(ccd1)\n",
+    "    [_,data2] = elasticShift(ccd2)\n",
+    "    [_,data3] = elasticShift(ccd3)\n",
     "    \n",
-    "    xdata1 = elasticShift(ccd1)\n",
-    "    xdata2 = elasticShift(ccd2)\n",
-    "    xdata3 = elasticShift(ccd3)\n",
-    "    \n",
-    "    xdata = np.arange(len(ccd1))\n",
-    "    \n",
-    "    np.savetxt(outputFilePath+filename+'_d1.dat' , np.transpose([xdata , ccd1]) , delimiter=\", \",\n",
-    "              newline=\"\\n\" , comments=\"# \" , header=\"pixel, ccd1\"\n",
+    "    np.savetxt(outputFilePath+filename+'_d1.dat' , np.transpose([xdata , data1]) , delimiter=\", \",\n",
+    "              newline=\"\\n\" , comments=\"# \" , header=\"ELoss, ccd1\"\n",
     "              )\n",
-    "    np.savetxt(outputFilePath+filename+'_d2.dat' , np.transpose([xdata , ccd2]) , delimiter=\", \",\n",
-    "              newline=\"\\n\" , comments=\"# \" , header=\"pixel, ccd2\"\n",
+    "    np.savetxt(outputFilePath+filename+'_d2.dat' , np.transpose([xdata , data2]) , delimiter=\", \",\n",
+    "              newline=\"\\n\" , comments=\"# \" , header=\"ELoss, ccd2\"\n",
     "              )\n",
-    "    np.savetxt(outputFilePath+filename+'_d3.dat' , np.transpose([xdata , ccd3]) , delimiter=\", \",\n",
-    "              newline=\"\\n\" , comments=\"# \" , header=\"pixel, ccd3\"\n",
-    "              )\n"
+    "    np.savetxt(outputFilePath+filename+'_d3.dat' , np.transpose([xdata , data3]) , delimiter=\", \",\n",
+    "              newline=\"\\n\" , comments=\"# \" , header=\"ELoss, ccd3\"\n",
+    "              )\n",
+    "\n",
+    "def elasticShift(pixelData):\n",
+    "\n",
+    "    global energyTrans\n",
+    "\n",
+    "    peaks, _ = find_peaks(pixelData,height=20,width=5)\n",
+    "    xdataPixel = np.arange(len(pixelData))\n",
+    "    \n",
+    "    xdataPixel = xdataPixel[(peaks[-1]-2000):(peaks[-1]+200)]\n",
+    "    energyData = pixelData[(peaks[-1]-2000):(peaks[-1]+200)]\n",
+    "    \n",
+    "    xDataEnergy = (xdataPixel - peaks[-1]) * energyTrans * -1\n",
+    "\n",
+    "    return [xDataEnergy,energyData]\n"
    ]
   },
   {
