--- a/ConvertData.ipynb
+++ b/ConvertData.ipynb
@@ -18,7 +18,7 @@
     "outputFilePath = 'X:\\\\RIXS\\\\Ruiz_e18603\\\\ASC\\\\'\n",
     "\n",
     "base = 'Cu'\n",
-    "energyTrans = 0.008128 #eV/subpixel\n",
+    "energyDispersion = 0.008128 #eV/subpixel\n",
     "\n",
     "scans = np.arange(117,280+1)"
    ]
@@ -69,7 +69,7 @@
     "\n",
     "def elasticShift(pixelData):\n",
     "\n",
-    "    global energyTrans\n",
+    "    global energyDispersion\n",
     "\n",
     "    peaks, _ = find_peaks(pixelData,height=20,width=5)\n",
     "    xdataPixel = np.arange(len(pixelData))\n",
@@ -77,7 +77,7 @@
     "    xdataPixel = xdataPixel[(peaks[-1]-2000):(peaks[-1]+200)]\n",
     "    energyData = pixelData[(peaks[-1]-2000):(peaks[-1]+200)]\n",
     "    \n",
-    "    xDataEnergy = (xdataPixel - peaks[-1]) * energyTrans * -1\n",
+    "    xDataEnergy = (xdataPixel - peaks[-1]) * energyDispersion * -1\n",
     "\n",
     "    return [xDataEnergy,energyData]\n"
    ]
