--- a/plotRIXS.ipynb
+++ b/plotRIXS.ipynb
@@ -17,7 +17,7 @@
     "inputFilePath = 'X:\\\\RIXS\\\\Ruiz_e18603\\\\RIXS\\\\'\n",
     "\n",
     "base = 'Cu'\n",
-    "energyTrans = 0.008128 #eV/subpixel"
+    "energyDispersion = 0.008128 #eV/subpixel"
    ]
   },
   {
@@ -61,7 +61,7 @@
     "\n",
     "def elasticShift(pixelData):\n",
     "\n",
-    "    global energyTrans\n",
+    "    global energyDispersion\n",
     "\n",
     "    peaks, _ = find_peaks(pixelData,height=20,width=5)\n",
     "    xdataPixel = np.arange(len(pixelData))\n",
@@ -69,7 +69,7 @@
     "    xdataPixel = xdataPixel[(peaks[-1]-2000):(peaks[-1]+200)]\n",
     "    energyData = pixelData[(peaks[-1]-2000):(peaks[-1]+200)]\n",
     "    \n",
-    "    xDataEnergy = (xdataPixel - peaks[-1]) * energyTrans * -1\n",
+    "    xDataEnergy = (xdataPixel - peaks[-1]) * energyDispersion * -1\n",
     "\n",
     "    return [xDataEnergy,energyData]\n"
    ]
