--- a/plotRIXS.ipynb
+++ b/plotRIXS.ipynb
@@ -190,7 +190,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x23675fc8820>"
+       "<matplotlib.legend.Legend at 0x18c8687f130>"
       ]
      },
      "execution_count": 5,
@@ -245,7 +245,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x236770905e0>"
+       "<matplotlib.legend.Legend at 0x18cbad826d0>"
       ]
      },
      "execution_count": 6,
