--- a/calQ.ipynb
+++ b/calQ.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,28 +79,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "twoTheta = 130\n",
-    "energy = 850\n",
+    "energy = 930\n",
     "\n",
-    "lattice = [6.28, 6.28, 6.28, 90, 90, 90]\n",
+    "lattice = [3.82, 3.82, 30.89, 90, 90, 90]\n",
     "ar, br, cr = invertedframe(lattice)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6393546710317739\n",
-      "0.4520920234698616\n"
+      "0.3338970343959193\n",
+      "0.23610085723943242\n"
      ]
     }
    ],
@@ -108,7 +108,7 @@
     "# alpha = 10\n",
     "# qIn, qOut = project(energy, twoTheta, alpha)\n",
     "\n",
-    "theta = 120\n",
+    "theta = 105\n",
     "qIn, qOut = thToq(energy, twoTheta, adressTheta(theta, twoTheta))\n",
     "\n",
     "# (1,0)\n",
@@ -117,19 +117,23 @@
     "\n",
     "# (1,1)\n",
     "q = qIn / vectorSum(ar, br, (180 - lattice[5]))\n",
-    "print(q)"
+    "print(q)\n",
+    "\n",
+    "#(H,K)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "115.20509653002617\n"
+      "87.64507220947935\n",
+      "97.9906770941421\n",
+      "137.3411297121224\n"
      ]
     }
    ],
@@ -137,7 +141,21 @@
     "# qIn = 1\n",
     "# alpha = qInToth(energy, twoTheta, qIn)\n",
     "\n",
-    "qIn = 0.6\n",
+    "#(1,0)\n",
+    "q=0.2\n",
+    "qIn = q*ar\n",
+    "theta = adressTheta(qInToth(energy, twoTheta, qIn), twoTheta)\n",
+    "print(theta)\n",
+    "\n",
+    "#(1,1)\n",
+    "q=0.2\n",
+    "qIn = vectorSum(ar,br,(180 - lattice[5])) * q\n",
+    "theta = adressTheta(qInToth(energy, twoTheta, qIn), twoTheta)\n",
+    "print(theta)\n",
+    "\n",
+    "#(H,K)\n",
+    "q=[0.35,0.35]\n",
+    "qIn = vectorSum(ar*q[0],br*q[1],(180 - lattice[5]))\n",
     "theta = adressTheta(qInToth(energy, twoTheta, qIn), twoTheta)\n",
     "print(theta)"
    ]
