--- a/plotRIXS.ipynb
+++ b/plotRIXS.ipynb
@@ -11,7 +11,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy import signal\n",
-    "from scipy.optimize import curve_fit"
+    "from scipy.optimize import curve_fit\n"
    ]
   },
   {
@@ -184,16 +184,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x18c8687f130>"
+       "<matplotlib.legend.Legend at 0x29157f64f40>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -245,7 +245,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x18cbad826d0>"
+       "<matplotlib.legend.Legend at 0x2917f4fcb80>"
       ]
      },
      "execution_count": 6,
