--- a/EnergyDrift.ipynb
+++ b/EnergyDrift.ipynb
@@ -8,10 +8,12 @@
    "source": [
     "# %matplotlib nbagg\n",
     "import os\n",
+    "import datetime\n",
     "import h5py\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy.optimize import curve_fit\n",
+    "today=datetime.date.today()\n",
     "\n",
     "mypath = 'C:\\\\Researches\\\\Data\\\\VI3\\\\202107\\\\'\n",
     "base = 'V'\n",
@@ -112,7 +114,7 @@
     "    \n",
     "plt.xlabel('subpixel')\n",
     "plt.ylabel('Counts/1 min')\n",
-    "plt.savefig('drift.png',dpi=600)\n"
+    "plt.savefig(today+'_'+base+'_'+'drift.png',dpi=600)\n"
    ]
   },
   {
@@ -145,7 +147,7 @@
     "    \n",
     "plt.xlabel('Photon Energy (eV)')\n",
     "plt.ylabel('FWHM (pixel)')\n",
-    "plt.savefig('FWHM.png',dpi=600)"
+    "plt.savefig(today+'_'+base+'_'+'FWHM.png',dpi=600)"
    ]
   },
   {
@@ -209,7 +211,7 @@
     "plt.plot(xplot,myslope3*xplot+myinter3, color = 'black')\n",
     "plt.annotate('Energy dispersion = '+str(round(energypersubpixel*1000,3))+' meV/subpixel',xy = (energy[0],center1[-1]))\n",
     "plt.annotate('Energy resolution = '+str(round(np.mean(fwhm1+fwhm2+fwhm3)*energypersubpixel*1000,3))+' meV',xy = (energy[0],center1[-2]))\n",
-    "plt.savefig('slope.png',dpi=600)"
+    "plt.savefig(today+'_'+base+'_'+'slope.png',dpi=600)"
    ]
   },
   {
