--- a/EnergyDrift.ipynb
+++ b/EnergyDrift.ipynb
@@ -114,7 +114,7 @@
     "    \n",
     "plt.xlabel('subpixel')\n",
     "plt.ylabel('Counts/1 min')\n",
-    "plt.savefig(today+'_'+base+'_'+'drift.png',dpi=600)\n"
+    "plt.savefig(today+'_'+base+'_'+'drift.eps',dpi=600,format='eps')\n"
    ]
   },
   {
@@ -147,7 +147,7 @@
     "    \n",
     "plt.xlabel('Photon Energy (eV)')\n",
     "plt.ylabel('FWHM (pixel)')\n",
-    "plt.savefig(today+'_'+base+'_'+'FWHM.png',dpi=600)"
+    "plt.savefig(today+'_'+base+'_'+'FWHM.eps',dpi=600,format='eps')"
    ]
   },
   {
@@ -211,7 +211,7 @@
     "plt.plot(xplot,myslope3*xplot+myinter3, color = 'black')\n",
     "plt.annotate('Energy dispersion = '+str(round(energypersubpixel*1000,3))+' meV/subpixel',xy = (energy[0],center1[-1]))\n",
     "plt.annotate('Energy resolution = '+str(round(np.mean(fwhm1+fwhm2+fwhm3)*energypersubpixel*1000,3))+' meV',xy = (energy[0],center1[-2]))\n",
-    "plt.savefig(today+'_'+base+'_'+'slope.png',dpi=600)"
+    "plt.savefig(today+'_'+base+'_'+'slope.eps',dpi=600,format='eps')"
    ]
   },
   {
