--- a/plotRIXS.ipynb
+++ b/plotRIXS.ipynb
@@ -52,7 +52,7 @@
     "\n",
     "def zeroEnergy( xUncorrEnegy,uncorrData ):\n",
     "    global energyResolution\n",
-    "    popt,_ = curve_fit(gaussian_norm, xUncorrEnegy, uncorrData, p0=[ 0 , energyResolution/2.355 , np.max(uncorrData)/10])\n",
+    "    popt,_ = curve_fit(gaussian_norm, xUncorrEnegy, uncorrData, p0=[ 0 , energyResolution , np.max(uncorrData)/10])\n",
     "    # print(popt)\n",
     "    xCorrEnergy = xUncorrEnegy-popt[0]\n",
     "    return xCorrEnergy\n",
