--- a/plotRIXS.ipynb
+++ b/plotRIXS.ipynb
@@ -354,7 +354,34 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def Gauss_norm(x,xc,sigma,area):\n",
+    "    norm = 1./sigma/2/np.sqrt(np.pi/2)\n",
+    "    return area*norm*np.exp(-2*(x-xc)**2/(sigma*2)**2)\n",
+    "\n",
+    "def Gaussian_norm(x,xc,fwhm,area):\n",
+    "    norm = 1./fwhm/np.sqrt(np.pi/4/np.log(2))\n",
+    "    return area*norm*np.exp(-4*np.log(2)*(x-xc)**2/(fwhm)**2)\n",
+    "\n",
+    "def Gauss_amp(x,xc,sigma,amp):\n",
+    "    return amp*np.exp(-2*(x-xc)**2/(sigma*2)**2)\n",
+    "\n",
+    "def Gaussian_amp(x,xc,fwhm,amp):\n",
+    "    return amp*np.exp(-4*np.log(2)*(x-xc)**2/(fwhm)**2)\n",
+    "\n",
+    "def Lorentz_norm(x,xc,fwhm,area):\n",
+    "    return 2*area/np.pi*fwhm/(4*(x-xc)**2+fwhm**2)\n",
+    "\n",
+    "def Lorentz_amp(x,xc,fwhm,amp):\n",
+    "    area = amp*fwhm*np.pi/2\n",
+    "    return 2*area/np.pi*fwhm/(4*(x-xc)**2+fwhm**2)\n",
+    "\n",
+    "def PsdVoigt(x,xc,area,wG,wL,mu):\n",
+    "    # wG = 0.85 * wG\n",
+    "    # wL = wG;\n",
+    "    # mu = 1.0;\n",
+    "    return area*(mu*2/np.pi*wL/(4*(x-xc)**2+wL**2)+(1-mu)*np.sqrt(4*np.log(2.))/np.sqrt(np.pi)/wG*np.exp(-4*np.log(2.)*(x-xc)**2/wG**2))\n"
+   ]
   }
  ],
  "metadata": {
