--- a/calQ.ipynb
+++ b/calQ.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
-    "\n",
+    "import numpy as np\n",
     "\n",
     "def EtoQ(energy):\n",
     "    qvalue = energy / 1973\n",
@@ -79,28 +79,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "twoTheta = 130\n",
     "energy = 930\n",
     "\n",
-    "lattice = [3.82, 3.82, 30.89, 90, 90, 90]\n",
+    "lattice = [3.909, 3.494, 12.69, 90, 90, 90]\n",
     "ar, br, cr = invertedframe(lattice)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.3338970343959193\n",
-      "0.23610085723943242\n"
+      "0.48175150937009736\n",
+      "0.32104943457991303\n"
      ]
     }
    ],
@@ -108,7 +108,7 @@
     "# alpha = 10\n",
     "# qIn, qOut = project(energy, twoTheta, alpha)\n",
     "\n",
-    "theta = 105\n",
+    "theta = 130\n",
     "qIn, qOut = thToq(energy, twoTheta, adressTheta(theta, twoTheta))\n",
     "\n",
     "# (1,0)\n",
@@ -124,16 +124,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "87.64507220947935\n",
-      "97.9906770941421\n",
-      "137.3411297121224\n"
+      "113.80832387361521\n",
+      "99.37388062066043\n",
+      "146.12746062363286\n"
      ]
     }
    ],
@@ -142,7 +142,7 @@
     "# alpha = qInToth(energy, twoTheta, qIn)\n",
     "\n",
     "#(1,0)\n",
-    "q=0.2\n",
+    "q=0.4\n",
     "qIn = q*ar\n",
     "theta = adressTheta(qInToth(energy, twoTheta, qIn), twoTheta)\n",
     "print(theta)\n",
@@ -159,6 +159,123 @@
     "theta = adressTheta(qInToth(energy, twoTheta, qIn), twoTheta)\n",
     "print(theta)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.45 122.841\n",
+      "0.44 120.869\n",
+      "0.43 118.993\n",
+      "0.42 117.198\n",
+      "0.41 115.473\n",
+      "0.4 113.808\n",
+      "0.39 112.197\n",
+      "0.38 110.634\n",
+      "0.37 109.113\n",
+      "0.36 107.63\n",
+      "0.35 106.182\n",
+      "0.34 104.765\n",
+      "0.33 103.376\n",
+      "0.32 102.014\n",
+      "0.31 100.676\n",
+      "0.3 99.359\n",
+      "0.29 98.064\n",
+      "0.28 96.787\n",
+      "0.27 95.527\n",
+      "0.26 94.284\n",
+      "0.25 93.055\n",
+      "0.24 91.84\n",
+      "0.23 90.639\n",
+      "0.22 89.449\n",
+      "0.21 88.27\n",
+      "0.2 87.102\n",
+      "0.19 85.943\n",
+      "0.18 84.793\n",
+      "0.17 83.652\n",
+      "0.16 82.518\n",
+      "0.15 81.391\n",
+      "0.14 80.271\n",
+      "0.13 79.156\n",
+      "0.12 78.047\n",
+      "0.11 76.943\n",
+      "0.1 75.844\n",
+      "0.09 74.748\n",
+      "0.08 73.656\n",
+      "0.07 72.567\n",
+      "0.06 71.481\n",
+      "0.05 70.397\n",
+      "0.04 69.316\n",
+      "0.03 68.235\n",
+      "0.02 67.156\n",
+      "0.01 66.078\n",
+      "0.0 65.0\n",
+      "-0.01 63.922\n",
+      "-0.02 62.844\n",
+      "-0.03 61.765\n",
+      "-0.04 60.684\n",
+      "-0.05 59.603\n",
+      "-0.06 58.519\n",
+      "-0.07 57.433\n",
+      "-0.08 56.344\n",
+      "-0.09 55.252\n",
+      "-0.1 54.156\n",
+      "-0.11 53.057\n",
+      "-0.12 51.953\n",
+      "-0.13 50.844\n",
+      "-0.14 49.729\n",
+      "-0.15 48.609\n",
+      "-0.16 47.482\n",
+      "-0.17 46.348\n",
+      "-0.18 45.207\n",
+      "-0.19 44.057\n",
+      "-0.2 42.898\n",
+      "-0.21 41.73\n",
+      "-0.22 40.551\n",
+      "-0.23 39.361\n",
+      "-0.24 38.16\n",
+      "-0.25 36.945\n",
+      "-0.26 35.716\n",
+      "-0.27 34.473\n",
+      "-0.28 33.213\n",
+      "-0.29 31.936\n",
+      "-0.3 30.641\n",
+      "-0.31 29.324\n",
+      "-0.32 27.986\n",
+      "-0.33 26.624\n",
+      "-0.34 25.235\n",
+      "-0.35 23.818\n",
+      "-0.36 22.37\n",
+      "-0.37 20.887\n",
+      "-0.38 19.366\n",
+      "-0.39 17.803\n",
+      "-0.4 16.192\n",
+      "-0.41 14.527\n",
+      "-0.42 12.802\n",
+      "-0.43 11.007\n",
+      "-0.44 9.131\n",
+      "-0.45 7.159\n"
+     ]
+    }
+   ],
+   "source": [
+    "for q in np.linspace(0.45,-0.45,91):\n",
+    "    qIn = q*ar\n",
+    "    theta = adressTheta(qInToth(energy, twoTheta, qIn), twoTheta)\n",
+    "    print(np.round(q,3),np.round(theta,3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
