--- a/OnlinePlot.ipynb
+++ b/OnlinePlot.ipynb
@@ -7,7 +7,6 @@
    "outputs": [],
    "source": [
     "%matplotlib nbagg\n",
-    "# import os\n",
     "import h5py\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -41,10 +40,9 @@
     "\n",
     "def xCorr(refData, uncorrData):\n",
     "\n",
-    "    corr = signal.correlate(refData, uncorrData)  # consider full pattern\n",
+    "    corr = signal.correlate(refData, uncorrData)\n",
     "    lag = np.argmax(corr)\n",
     "    corrData = np.roll(uncorrData, lag)\n",
-    "#     plt.plot(corr)\n",
     "\n",
     "    return corrData\n",
     "\n",
@@ -72,11 +70,6 @@
     "    ccd1 = xCorr(ccd2,ccd1)\n",
     "    ccd3 = xCorr(ccd2,ccd3)\n",
     "    xdata,tempData = elasticShift(ccd1+ccd2+ccd3)\n",
-    "    \n",
-    "#     [xdata,data1] = elasticShift(ccd1)\n",
-    "#     [_,data2] = elasticShift(ccd2)\n",
-    "#     [_,data3] = elasticShift(ccd3)\n",
-    "#     tempData = (data1+data2+data3)/3\n",
     "    \n",
     "    return [xdata,tempData]\n",
     "\n",
