--- a/OnlinePlot.ipynb
+++ b/OnlinePlot.ipynb
@@ -36,7 +36,7 @@
     "    \n",
     "    xDataEnergy = (xdataPixel - peaks[-1]) * energyDispersion * -1\n",
     "\n",
-    "    return [xDataEnergy,energyData]\n",
+    "    return xDataEnergy,energyData\n",
     "\n",
     "def xCorr(refData, uncorrData):\n",
     "\n",
@@ -63,27 +63,27 @@
     "    f2 = h5py.File(path+filename+\"_d2.h5\", 'r')\n",
     "    f3 = h5py.File(path+filename+\"_d3.h5\", 'r')\n",
     "\n",
-    "    ccd1 = f1['entry']['analysis']['spectrum'][()]\n",
-    "    ccd2 = f2['entry']['analysis']['spectrum'][()]\n",
-    "    ccd3 = f3['entry']['analysis']['spectrum'][()]\n",
+    "    ccd1 = np.array(f1['entry']['analysis']['spectrum'][()])\n",
+    "    ccd2 = np.array(f2['entry']['analysis']['spectrum'][()])\n",
+    "    ccd3 = np.array(f3['entry']['analysis']['spectrum'][()])\n",
     "    \n",
     "    ccd1 = xCorr(ccd2,ccd1)\n",
     "    ccd3 = xCorr(ccd2,ccd3)\n",
     "    xdata,tempData = elasticShift(ccd1+ccd2+ccd3)\n",
     "    \n",
-    "    return [xdata,tempData]\n",
+    "    return xdata,tempData\n",
     "\n",
     "def getScans(scans):\n",
     "    for i,scannumber in enumerate(scans):\n",
     "        if i == 0:\n",
-    "            [xdata,ydata] = getData(scannumber)\n",
+    "            xdata,ydata = getData(scannumber)\n",
     "            refdata = ydata\n",
     "            sumdata = ydata\n",
     "        else:\n",
-    "            [_,ydata] = getData(scannumber)\n",
+    "            _,ydata = getData(scannumber)\n",
     "            ydata = xCorr(refdata,ydata)\n",
     "            sumdata = sumdata+ydata\n",
-    "    return [xdata,sumdata]\n"
+    "    return xdata,sumdata\n"
    ]
   },
   {
@@ -118,7 +118,7 @@
    ],
    "source": [
     "fig = plt.figure()\n",
-    "[X,Y]=getData(105)\n",
+    "X,Y=getData(105)\n",
     "plt.plot(X,Y);"
    ]
   },
@@ -152,7 +152,7 @@
    ],
    "source": [
     "fig = plt.figure()\n",
-    "[X,Y]=getScans([105,106])\n",
+    "X,Y=getScans([105,106])\n",
     "plt.plot(X,Y);"
    ]
   },
@@ -190,13 +190,13 @@
     "#####################################\n",
     "\n",
     "scans = range(289,293+1)\n",
-    "[X,Y]=getScans(scans)\n",
+    "X,Y=getScans(scans)\n",
     "plt.plot(X,Y,  label='LV')\n",
     "\n",
     "######################################\n",
     "\n",
     "scans = range(442,446+1)\n",
-    "[X,Y]=getScans(scans)\n",
+    "X,Y=getScans(scans)\n",
     "plt.plot(X,Y, label='LH')\n",
     "\n",
     "######################################\n",
@@ -239,12 +239,10 @@
    "source": [
     "fig = plt.figure()\n",
     "\n",
-    "scans = np.arange(117,148+1)\n",
-    "\n",
-    "sumData = np.zeros(2200)\n",
+    "scans = range(117,148+1)\n",
     "\n",
     "for i,s in enumerate(scans):\n",
-    "    [xData,oneData] = getData(s)\n",
+    "    xData,oneData = getData(s)\n",
     "    plt.plot(xData,oneData+100*i,label=str(s))\n",
     "\n",
     "plt.xlabel('Energy Loss (eV)')\n",
@@ -285,14 +283,14 @@
    "source": [
     "fig = plt.figure()\n",
     "\n",
-    "scans = np.arange(117,147+1)\n",
+    "scans = range(117,147+1)\n",
     "Ei = np.arange(930,937.5+0.1,0.25)\n",
     "eiNum = len(scans)\n",
     "\n",
     "matrixData = np.zeros((2200, eiNum))\n",
     "\n",
     "for i,s in enumerate(scans):\n",
-    "    [Eloss,oneData] = getData(s)\n",
+    "    Eloss,oneData = getData(s)\n",
     "    matrixData[:,i] = oneData.T\n",
     "\n",
     "X,Y = np.meshgrid(Ei,Eloss)\n",
