--- a/OnlinePlot.ipynb
+++ b/OnlinePlot.ipynb
@@ -51,17 +51,17 @@
     "    global base\n",
     "    \n",
     "    if scannumber < 10:\n",
-    "        filename = base+\"_\"+\"000\"+str(scannumber)\n",
+    "        filename = base+'_'+'000'+str(scannumber)\n",
     "    elif scannumber < 100:\n",
-    "        filename = base+\"_\"+\"00\"+str(scannumber)\n",
+    "        filename = base+'_'+'00'+str(scannumber)\n",
     "    elif scannumber < 1000:    \n",
-    "        filename = base+\"_\"+\"0\"+str(scannumber)\n",
+    "        filename = base+'_'+'0'+str(scannumber)\n",
     "    else:    \n",
-    "        filename = base+\"_\"+str(scannumber)\n",
+    "        filename = base+'_'+str(scannumber)\n",
     "\n",
-    "    f1 = h5py.File(path+filename+\"_d1.h5\", 'r')\n",
-    "    f2 = h5py.File(path+filename+\"_d2.h5\", 'r')\n",
-    "    f3 = h5py.File(path+filename+\"_d3.h5\", 'r')\n",
+    "    f1 = h5py.File(path+filename+'_d1.h5', 'r')\n",
+    "    f2 = h5py.File(path+filename+'_d2.h5', 'r')\n",
+    "    f3 = h5py.File(path+filename+'_d3.h5', 'r')\n",
     "\n",
     "    ccd1 = np.array(f1['entry']['analysis']['spectrum'][()])\n",
     "    ccd2 = np.array(f2['entry']['analysis']['spectrum'][()])\n",
