--- a/calQ.ipynb
+++ b/calQ.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,28 +79,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "twoTheta = 130\n",
-    "energy = 930\n",
+    "energy = 708\n",
     "\n",
-    "lattice = [3.909, 3.494, 12.69, 90, 90, 90]\n",
+    "lattice = [3.9397, 3.9397, 13.237, 90, 90, 90]\n",
     "ar, br, cr = invertedframe(lattice)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.48175150937009736\n",
-      "0.32104943457991303\n"
+      "0.3696331175086674\n",
+      "0.26137008394150263\n"
      ]
     }
    ],
@@ -162,112 +162,166 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.45 122.841\n",
-      "0.44 120.869\n",
-      "0.43 118.993\n",
-      "0.42 117.198\n",
-      "0.41 115.473\n",
-      "0.4 113.808\n",
-      "0.39 112.197\n",
-      "0.38 110.634\n",
-      "0.37 109.113\n",
-      "0.36 107.63\n",
-      "0.35 106.182\n",
-      "0.34 104.765\n",
-      "0.33 103.376\n",
-      "0.32 102.014\n",
-      "0.31 100.676\n",
-      "0.3 99.359\n",
-      "0.29 98.064\n",
-      "0.28 96.787\n",
-      "0.27 95.527\n",
-      "0.26 94.284\n",
-      "0.25 93.055\n",
-      "0.24 91.84\n",
-      "0.23 90.639\n",
-      "0.22 89.449\n",
-      "0.21 88.27\n",
-      "0.2 87.102\n",
-      "0.19 85.943\n",
-      "0.18 84.793\n",
-      "0.17 83.652\n",
-      "0.16 82.518\n",
-      "0.15 81.391\n",
-      "0.14 80.271\n",
-      "0.13 79.156\n",
-      "0.12 78.047\n",
-      "0.11 76.943\n",
-      "0.1 75.844\n",
-      "0.09 74.748\n",
-      "0.08 73.656\n",
-      "0.07 72.567\n",
-      "0.06 71.481\n",
-      "0.05 70.397\n",
-      "0.04 69.316\n",
-      "0.03 68.235\n",
-      "0.02 67.156\n",
-      "0.01 66.078\n",
+      "0.36 126.968\n",
+      "0.35 124.112\n",
+      "0.34 121.476\n",
+      "0.33 119.011\n",
+      "0.32 116.685\n",
+      "0.31 114.472\n",
+      "0.3 112.356\n",
+      "0.29 110.321\n",
+      "0.28 108.356\n",
+      "0.27 106.454\n",
+      "0.26 104.605\n",
+      "0.25 102.805\n",
+      "0.24 101.048\n",
+      "0.23 99.329\n",
+      "0.22 97.644\n",
+      "0.21 95.991\n",
+      "0.2 94.366\n",
+      "0.19 92.766\n",
+      "0.18 91.19\n",
+      "0.17 89.634\n",
+      "0.16 88.098\n",
+      "0.15 86.579\n",
+      "0.14 85.076\n",
+      "0.13 83.587\n",
+      "0.12 82.111\n",
+      "0.11 80.647\n",
+      "0.1 79.193\n",
+      "0.09 77.749\n",
+      "0.08 76.312\n",
+      "0.07 74.883\n",
+      "0.06 73.46\n",
+      "0.05 72.042\n",
+      "0.04 70.628\n",
+      "0.03 69.218\n",
+      "0.02 67.811\n",
+      "0.01 66.405\n",
       "0.0 65.0\n",
-      "-0.01 63.922\n",
-      "-0.02 62.844\n",
-      "-0.03 61.765\n",
-      "-0.04 60.684\n",
-      "-0.05 59.603\n",
-      "-0.06 58.519\n",
-      "-0.07 57.433\n",
-      "-0.08 56.344\n",
-      "-0.09 55.252\n",
-      "-0.1 54.156\n",
-      "-0.11 53.057\n",
-      "-0.12 51.953\n",
-      "-0.13 50.844\n",
-      "-0.14 49.729\n",
-      "-0.15 48.609\n",
-      "-0.16 47.482\n",
-      "-0.17 46.348\n",
-      "-0.18 45.207\n",
-      "-0.19 44.057\n",
-      "-0.2 42.898\n",
-      "-0.21 41.73\n",
-      "-0.22 40.551\n",
-      "-0.23 39.361\n",
-      "-0.24 38.16\n",
-      "-0.25 36.945\n",
-      "-0.26 35.716\n",
-      "-0.27 34.473\n",
-      "-0.28 33.213\n",
-      "-0.29 31.936\n",
-      "-0.3 30.641\n",
-      "-0.31 29.324\n",
-      "-0.32 27.986\n",
-      "-0.33 26.624\n",
-      "-0.34 25.235\n",
-      "-0.35 23.818\n",
-      "-0.36 22.37\n",
-      "-0.37 20.887\n",
-      "-0.38 19.366\n",
-      "-0.39 17.803\n",
-      "-0.4 16.192\n",
-      "-0.41 14.527\n",
-      "-0.42 12.802\n",
-      "-0.43 11.007\n",
-      "-0.44 9.131\n",
-      "-0.45 7.159\n"
+      "-0.01 63.595\n",
+      "-0.02 62.189\n",
+      "-0.03 60.782\n",
+      "-0.04 59.372\n",
+      "-0.05 57.958\n",
+      "-0.06 56.54\n",
+      "-0.07 55.117\n",
+      "-0.08 53.688\n",
+      "-0.09 52.251\n",
+      "-0.1 50.807\n",
+      "-0.11 49.353\n",
+      "-0.12 47.889\n",
+      "-0.13 46.413\n",
+      "-0.14 44.924\n",
+      "-0.15 43.421\n",
+      "-0.16 41.902\n",
+      "-0.17 40.366\n",
+      "-0.18 38.81\n",
+      "-0.19 37.234\n",
+      "-0.2 35.634\n",
+      "-0.21 34.009\n",
+      "-0.22 32.356\n",
+      "-0.23 30.671\n",
+      "-0.24 28.952\n",
+      "-0.25 27.195\n",
+      "-0.26 25.395\n",
+      "-0.27 23.546\n",
+      "-0.28 21.644\n",
+      "-0.29 19.679\n",
+      "-0.3 17.644\n",
+      "-0.31 15.528\n",
+      "-0.32 13.315\n",
+      "-0.33 10.989\n",
+      "-0.34 8.524\n",
+      "-0.35 5.888\n",
+      "-0.36 3.032\n"
      ]
     }
    ],
    "source": [
-    "for q in np.linspace(0.45,-0.45,91):\n",
+    "for q in np.linspace(0.36,-0.36,73):\n",
     "    qIn = q*ar\n",
     "    theta = adressTheta(qInToth(energy, twoTheta, qIn), twoTheta)\n",
     "    print(np.round(q,3),np.round(theta,3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.26 0.26 129.363\n",
+      "0.25 0.25 125.098\n",
+      "0.24 0.24 121.326\n",
+      "0.23 0.23 117.895\n",
+      "0.22 0.22 114.717\n",
+      "0.21 0.21 111.734\n",
+      "0.2 0.2 108.908\n",
+      "0.19 0.19 106.211\n",
+      "0.18 0.18 103.62\n",
+      "0.17 0.17 101.12\n",
+      "0.16 0.16 98.697\n",
+      "0.15 0.15 96.341\n",
+      "0.14 0.14 94.042\n",
+      "0.13 0.13 91.794\n",
+      "0.12 0.12 89.589\n",
+      "0.11 0.11 87.422\n",
+      "0.1 0.1 85.289\n",
+      "0.09 0.09 83.184\n",
+      "0.08 0.08 81.105\n",
+      "0.07 0.07 79.048\n",
+      "0.06 0.06 77.008\n",
+      "0.05 0.05 74.984\n",
+      "0.04 0.04 72.973\n",
+      "0.03 0.03 70.971\n",
+      "0.02 0.02 68.977\n",
+      "0.01 0.01 66.987\n",
+      "0.0 0.0 65.0\n",
+      "-0.01 -0.01 63.013\n",
+      "-0.02 -0.02 61.023\n",
+      "-0.03 -0.03 59.029\n",
+      "-0.04 -0.04 57.027\n",
+      "-0.05 -0.05 55.016\n",
+      "-0.06 -0.06 52.992\n",
+      "-0.07 -0.07 50.952\n",
+      "-0.08 -0.08 48.895\n",
+      "-0.09 -0.09 46.816\n",
+      "-0.1 -0.1 44.711\n",
+      "-0.11 -0.11 42.578\n",
+      "-0.12 -0.12 40.411\n",
+      "-0.13 -0.13 38.206\n",
+      "-0.14 -0.14 35.958\n",
+      "-0.15 -0.15 33.659\n",
+      "-0.16 -0.16 31.303\n",
+      "-0.17 -0.17 28.88\n",
+      "-0.18 -0.18 26.38\n",
+      "-0.19 -0.19 23.789\n",
+      "-0.2 -0.2 21.092\n",
+      "-0.21 -0.21 18.266\n",
+      "-0.22 -0.22 15.283\n",
+      "-0.23 -0.23 12.105\n",
+      "-0.24 -0.24 8.674\n",
+      "-0.25 -0.25 4.902\n",
+      "-0.26 -0.26 0.637\n"
+     ]
+    }
+   ],
+   "source": [
+    "for q in np.linspace(0.26,-0.26,53):\n",
+    "    qIn = vectorSum(ar,br,(180 - lattice[5])) * q\n",
+    "    theta = adressTheta(qInToth(energy, twoTheta, qIn), twoTheta)\n",
+    "    print(np.round(q,3),np.round(q,3),np.round(theta,3))"
    ]
   },
   {
