--- a/calQ.ipynb
+++ b/calQ.ipynb
@@ -79,28 +79,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "twoTheta = 130\n",
     "energy = 708\n",
     "\n",
-    "lattice = [3.9397, 3.9397, 13.237, 90, 90, 90]\n",
+    "lattice = [3.9397 * math.sqrt(2), 3.9397* math.sqrt(2), 13.237, 90, 90, 90]\n",
     "ar, br, cr = invertedframe(lattice)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.3696331175086674\n",
-      "0.26137008394150263\n"
+      "0.4724704821895331\n",
+      "0.3340870818666968\n"
      ]
     }
    ],
@@ -108,7 +108,7 @@
     "# alpha = 10\n",
     "# qIn, qOut = project(energy, twoTheta, alpha)\n",
     "\n",
-    "theta = 130\n",
+    "theta = 120\n",
     "qIn, qOut = thToq(energy, twoTheta, adressTheta(theta, twoTheta))\n",
     "\n",
     "# (1,0)\n",
