--- a/plotRIXS.ipynb
+++ b/plotRIXS.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def MakeFileName(scanNumber):\n",
+    "def makeFileName(scanNumber):\n",
     "    global Atom\n",
     "    if scanNumber < 10:\n",
     "        fileName = Atom + \"_\" + \"000\" + str(scanNumber)\n",
@@ -56,7 +56,7 @@
     "        fileName = Atom + \"_\" + str(scanNumber)\n",
     "    return fileName\n",
     "\n",
-    "def Gaussian_amp(x,xc,fwhm,amp):\n",
+    "def gaussianAmp(x,xc,fwhm,amp):\n",
     "    return amp*np.exp(-4*np.log(2)*(x-xc)**2/(fwhm)**2)\n",
     "\n",
     "def elasticShift(xAxis,uncorrData):\n",
@@ -67,7 +67,7 @@
     "    uncorrData= np.roll(uncorrData, refElasticPixel - peaks[-1])\n",
     "\n",
     "    popt, pcov = optimize.curve_fit(\n",
-    "        Gaussian_amp,\n",
+    "        gaussianAmp,\n",
     "        xAxis,\n",
     "        uncorrData,\n",
     "        p0=[refElasticPixel, 10, properties[\"peak_heights\"][-1]],\n",
@@ -123,18 +123,18 @@
     "    corrData = f3(xAxis)\n",
     "    return corrData\n",
     "\n",
-    "def EnergyTrans(rawData):\n",
+    "def energyTrans(rawData):\n",
     "    global energyDispersion\n",
     "    pixel = np.arange(len(rawData))\n",
     "    pixelAxis,pixelData = elasticShift(pixel,rawData)\n",
     "    energyAxis = np.array(pixelAxis * energyDispersion)\n",
     "    return energyAxis,pixelData\n",
     "\n",
-    "def GetData(scanNumber):\n",
+    "def getData(scanNumber):\n",
     "    global Path\n",
-    "    f1 = h5py.File(Path + \"\\\\RIXS\\\\\" + MakeFileName(scanNumber) + \"_d1.h5\", \"r\")\n",
-    "    f2 = h5py.File(Path + \"\\\\RIXS\\\\\" + MakeFileName(scanNumber) + \"_d2.h5\", \"r\")\n",
-    "    f3 = h5py.File(Path + \"\\\\RIXS\\\\\" + MakeFileName(scanNumber) + \"_d3.h5\", \"r\")\n",
+    "    f1 = h5py.File(Path + \"\\\\RIXS\\\\\" + makeFileName(scanNumber) + \"_d1.h5\", \"r\")\n",
+    "    f2 = h5py.File(Path + \"\\\\RIXS\\\\\" + makeFileName(scanNumber) + \"_d2.h5\", \"r\")\n",
+    "    f3 = h5py.File(Path + \"\\\\RIXS\\\\\" + makeFileName(scanNumber) + \"_d3.h5\", \"r\")\n",
     "    ccd1 = f1[\"entry\"][\"analysis\"][\"spectrum\"][()]\n",
     "    ccd2 = f2[\"entry\"][\"analysis\"][\"spectrum\"][()]\n",
     "    ccd3 = f3[\"entry\"][\"analysis\"][\"spectrum\"][()]\n",
@@ -146,15 +146,15 @@
     "    return ccd, acqTime\n",
     "\n",
     "\n",
-    "def CombineData(scans):\n",
-    "    refData, totalTime = GetData(scans[0])\n",
+    "def combineData(scans):\n",
+    "    refData, totalTime = getData(scans[0])\n",
     "    data = refData\n",
     "    for x in scans[1:]:\n",
-    "        tempData, oneTime = GetData(x)\n",
+    "        tempData, oneTime = getData(x)\n",
     "        data = data + xCorr(refData, tempData)\n",
     "        totalTime = totalTime + oneTime\n",
     "    pixelData = data / totalTime * 300  # normalize to 5 minutes\n",
-    "    energyAxis,energyData = EnergyTrans(pixelData)\n",
+    "    energyAxis,energyData = energyTrans(pixelData)\n",
     "    return [energyAxis,energyData]"
    ]
   },
@@ -188,7 +188,7 @@
    ],
    "source": [
     "fig = plt.figure()\n",
-    "[X,Y]=CombineData([18])   #scan number\n",
+    "[X,Y]=combineData([18])   #scan number\n",
     "plt.plot(X,Y)\n",
     "plt.xlim([-50,50])"
    ]
@@ -237,7 +237,7 @@
     "}\n",
     "\n",
     "for i, key in enumerate(zipLog):\n",
-    "    [X,Y]=CombineData(zipLog[key])\n",
+    "    [X,Y]=combineData(zipLog[key])\n",
     "    plt.plot(X,Y+i*20,label=key)\n",
     "\n",
     "# plt.xlim([-401,-398])\n",
@@ -283,7 +283,7 @@
     "matrixEi,_ = np.meshgrid(Ei,np.arange(dataLength+100))\n",
     "\n",
     "for i,s in enumerate(scans):\n",
-    "    [Eloss,oneData] = getdata(s)\n",
+    "    [Eloss,oneData] = getData(s)\n",
     "    matrixData[:,i] = oneData.T\n",
     "    matrixEloss[:,i] = Eloss.T\n",
     "\n",
@@ -341,9 +341,9 @@
     "def threeGaussian(x, y0, gamma, mu, amp, mu1, amp1, mu2, amp2):\n",
     "    return (\n",
     "        y0\n",
-    "        + gaussian_norm(x, mu, gamma, amp)\n",
-    "        + gaussian_norm(x, mu1, gamma, amp1)\n",
-    "        + gaussian_norm(x, mu2, gamma, amp2)\n",
+    "        + gaussianAmp(x, mu, gamma, amp)\n",
+    "        + gaussianAmp(x, mu1, gamma, amp1)\n",
+    "        + gaussianAmp(x, mu2, gamma, amp2)\n",
     "    )\n",
     "\n",
     "\n",
@@ -356,7 +356,7 @@
     "\n",
     "def fixLines(scans):\n",
     "\n",
-    "    energyData = CombineData(scans)\n",
+    "    energyData = combineData(scans)\n",
     "\n",
     "    X = energyData[0, (refElasticPixel - 90) : (refElasticPixel + 90)]\n",
     "    Y = energyData[1, (refElasticPixel - 90) : (refElasticPixel + 90)]\n",
