--- a/plotRIXS.ipynb
+++ b/plotRIXS.ipynb
@@ -76,7 +76,7 @@
     "    corrAxis = np.array(popt[0]-round(popt[0]) + refElasticPixel - xAxis)\n",
     "    return corrAxis,corrData\n",
     "\n",
-    "# def xcorr(refData, uncorrData):\n",
+    "# def corr_xaxis(refData, uncorrData):\n",
     "#     corr = signal.correlate(refData, uncorrData)  # consider full pattern\n",
     "#     lags = signal.correlation_lags(len(refData), len(uncorrData))\n",
     "#     lag = lags[np.argmax(corr)]\n",
@@ -93,7 +93,7 @@
     "#     corrData = np.roll(uncorrData, lag)\n",
     "#     return corrData\n",
     "\n",
-    "def xcorr(refData, uncorrData):\n",
+    "def corr_xaxis(refData, uncorrData):\n",
     "\n",
     "    xAxis = np.arange(len(refData))\n",
     "    xAxisNew = np.arange(0,len(refData)-1,0.1)\n",
@@ -123,7 +123,7 @@
     "    corrData = f3(xAxis)\n",
     "    return corrData\n",
     "\n",
-    "def energy_trans(rawData):\n",
+    "def trans_energy(rawData):\n",
     "    global energyDispersion\n",
     "    pixel = np.arange(len(rawData))\n",
     "    pixelAxis,pixelData = elastic_shift(pixel,rawData)\n",
@@ -141,7 +141,7 @@
     "    acqTime1 = np.mean(f1[\"entry\"][\"instrument\"][\"NDAttributes\"][\"AcquireTime\"][()])\n",
     "    acqTime2 = np.mean(f2[\"entry\"][\"instrument\"][\"NDAttributes\"][\"AcquireTime\"][()])\n",
     "    acqTime3 = np.mean(f3[\"entry\"][\"instrument\"][\"NDAttributes\"][\"AcquireTime\"][()])\n",
-    "    ccd = (xcorr(ccd2, ccd1) + ccd2 + xcorr(ccd2, ccd3)) / 3\n",
+    "    ccd = (corr_xaxis(ccd2, ccd1) + ccd2 + corr_xaxis(ccd2, ccd3)) / 3\n",
     "    acqTime = (acqTime1 + acqTime2 + acqTime3) / 3\n",
     "    return ccd, acqTime\n",
     "\n",
@@ -151,10 +151,10 @@
     "    data = refData\n",
     "    for x in scans[1:]:\n",
     "        tempData, oneTime = get_data(x)\n",
-    "        data = data + xcorr(refData, tempData)\n",
+    "        data = data + corr_xaxis(refData, tempData)\n",
     "        totalTime = totalTime + oneTime\n",
     "    pixelData = data / totalTime * 300  # normalize to 5 minutes\n",
-    "    energyAxis,energyData = energy_trans(pixelData)\n",
+    "    energyAxis,energyData = trans_energy(pixelData)\n",
     "    return [energyAxis,energyData]"
    ]
   },
