--- a/plotRIXS.ipynb
+++ b/plotRIXS.ipynb
@@ -15,8 +15,9 @@
     "from scipy import interpolate\n",
     "# from scipy.signal.signaltools import choose_conv_method\n",
     "\n",
+    "\n",
     "# %matplotlib notebook\n",
-    "# plt.rcParams['figure.figsize'] = (20.0, 10.0)\n",
+    "# plt.rcParams['figure.figsize'] = (6.4, 4.8)\n",
     "%matplotlib widget"
    ]
   },
@@ -439,7 +440,11 @@
     "#         / np.sqrt(np.pi)\n",
     "#         / w\n",
     "#         * np.exp(-4 * np.log(2.0) * (x - xc) ** 2 / w ** 2)\n",
-    "#     )"
+    "#     )\n",
+    "\n",
+    "\n",
+    "# from scipy.special import voigt_profile\n",
+    "# voigt_profile(x, sigma, gamma, out=None) = <ufunc 'voigt_profile'>"
    ]
   },
   {
