--- a/live/OnlinePlot.ipynb
+++ b/live/OnlinePlot.ipynb
@@ -42,11 +42,11 @@
     "    data = loadtxt(projectPath+'/XAS/'+filename+'.xas', comments='#')\n",
     "\n",
     "    photonEnergy = data[:,0]\n",
-    "    TEY = data[:,1]\n",
-    "    TFY = data[:,2]\n",
-    "    RMU = data[:,3]\n",
+    "    tey = data[:,1]\n",
+    "    tfy = data[:,2]\n",
+    "    rmu = data[:,3]\n",
     "    \n",
-    "    return photonEnergy,TEY,TFY,RMU\n",
+    "    return photonEnergy,tey,tfy,rmu\n",
     "\n",
     "def elastic_shift(pixelData,zeroType,peakHeight,peakWidth):\n",
     "\n",
