--- a/plotRIXS.ipynb
+++ b/plotRIXS.ipynb
@@ -70,15 +70,13 @@
     "        peakHeight = properties[\"peak_heights\"][-1]\n",
     "    elif zeroType == \"height\":\n",
     "        peaks = xAxis[(uncorrData>peakHeight)]\n",
-    "        peakHeight = uncorrData[(uncorrData>peakHeight)][-1]\n",
     "    else:\n",
-    "        peaks = xAxis\n",
-    "        peakHeight = uncorrData[-1]\n",
+    "        peaks = [refElasticPixel]\n",
     "    uncorrData= np.roll(uncorrData, refElasticPixel - peaks[-1])\n",
     "    popt, pcov = optimize.curve_fit(\n",
     "        gaussian_amp,\n",
-    "        xAxis,\n",
-    "        uncorrData,\n",
+    "        xAxis[(xAxis>refElasticPixel-70)&(xAxis<refElasticPixel+70)],\n",
+    "        uncorrData[(xAxis>refElasticPixel-70)&(xAxis<refElasticPixel+70)],\n",
     "        p0=[refElasticPixel, 10, peakHeight],\n",
     "    )\n",
     "    corrData= np.roll(uncorrData, refElasticPixel - round(popt[0]))[::-1]\n",
