--- a/calQ.ipynb
+++ b/calQ.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,28 +79,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "twoTheta = 130\n",
     "energy = 708\n",
     "\n",
-    "lattice = [5.334, 5.334, 5.4892, 90, 90, 90]\n",
+    "lattice = [6.8275, 6.8275, 20.5619, 90, 90, 120]\n",
     "ar, br, cr = invertedframe(lattice)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.4424051599860871\n",
-      "0.3128276886580817\n"
+      "0.5014052433089051\n",
+      "0.28948645219748614\n"
      ]
     }
    ],
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -171,35 +171,35 @@
      "text": [
       "0.0 \t0\t 65.0 \n",
       "\n",
-      "0.02 \t0\t 67.076 \n",
+      "0.02 \t0\t 66.872 \n",
       "\n",
-      "0.04 \t0\t 69.154 \n",
+      "0.04 \t0\t 68.747 \n",
       "\n",
-      "0.06 \t0\t 71.238 \n",
+      "0.06 \t0\t 70.625 \n",
       "\n",
-      "0.08 \t0\t 73.33 \n",
+      "0.08 \t0\t 72.51 \n",
       "\n",
-      "0.1 \t0\t 75.434 \n",
+      "0.1 \t0\t 74.403 \n",
       "\n",
-      "0.12 \t0\t 77.552 \n",
+      "0.12 \t0\t 76.306 \n",
       "\n",
-      "0.14 \t0\t 79.687 \n",
+      "0.14 \t0\t 78.222 \n",
       "\n",
-      "0.16 \t0\t 81.843 \n",
+      "0.16 \t0\t 80.153 \n",
       "\n",
-      "0.18 \t0\t 84.025 \n",
+      "0.18 \t0\t 82.102 \n",
       "\n",
-      "0.2 \t0\t 86.235 \n",
+      "0.2 \t0\t 84.071 \n",
       "\n",
-      "0.22 \t0\t 88.479 \n",
+      "0.22 \t0\t 86.064 \n",
       "\n",
-      "0.24 \t0\t 90.762 \n",
+      "0.24 \t0\t 88.085 \n",
       "\n",
-      "0.26 \t0\t 93.09 \n",
+      "0.26 \t0\t 90.136 \n",
       "\n",
-      "0.28 \t0\t 95.469 \n",
+      "0.28 \t0\t 92.222 \n",
       "\n",
-      "0.3 \t0\t 97.908 \n",
+      "0.3 \t0\t 94.348 \n",
       "\n"
      ]
     }
@@ -215,162 +215,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-0.345 -0.345 2.922\n",
-      "-0.34 -0.34 4.45\n",
-      "-0.335 -0.335 5.91\n",
-      "-0.33 -0.33 7.31\n",
-      "-0.325 -0.325 8.658\n",
-      "-0.32 -0.32 9.959\n",
-      "-0.315 -0.315 11.22\n",
-      "-0.31 -0.31 12.444\n",
-      "-0.305 -0.305 13.635\n",
-      "-0.3 -0.3 14.795\n",
-      "-0.295 -0.295 15.928\n",
-      "-0.29 -0.29 17.036\n",
-      "-0.285 -0.285 18.12\n",
-      "-0.28 -0.28 19.183\n",
-      "-0.275 -0.275 20.226\n",
-      "-0.27 -0.27 21.251\n",
-      "-0.265 -0.265 22.258\n",
-      "-0.26 -0.26 23.249\n",
-      "-0.255 -0.255 24.225\n",
-      "-0.25 -0.25 25.187\n",
-      "-0.245 -0.245 26.136\n",
-      "-0.24 -0.24 27.072\n",
-      "-0.235 -0.235 27.997\n",
-      "-0.23 -0.23 28.91\n",
-      "-0.225 -0.225 29.813\n",
-      "-0.22 -0.22 30.706\n",
-      "-0.215 -0.215 31.589\n",
-      "-0.21 -0.21 32.464\n",
-      "-0.205 -0.205 33.33\n",
-      "-0.2 -0.2 34.188\n",
-      "-0.195 -0.195 35.038\n",
-      "-0.19 -0.19 35.882\n",
-      "-0.185 -0.185 36.718\n",
-      "-0.18 -0.18 37.548\n",
-      "-0.175 -0.175 38.372\n",
-      "-0.17 -0.17 39.19\n",
-      "-0.165 -0.165 40.002\n",
-      "-0.16 -0.16 40.809\n",
-      "-0.155 -0.155 41.611\n",
-      "-0.15 -0.15 42.408\n",
-      "-0.145 -0.145 43.2\n",
-      "-0.14 -0.14 43.988\n",
-      "-0.135 -0.135 44.772\n",
-      "-0.13 -0.13 45.552\n",
-      "-0.125 -0.125 46.329\n",
-      "-0.12 -0.12 47.101\n",
-      "-0.115 -0.115 47.871\n",
-      "-0.11 -0.11 48.637\n",
-      "-0.105 -0.105 49.4\n",
-      "-0.1 -0.1 50.161\n",
-      "-0.095 -0.095 50.918\n",
-      "-0.09 -0.09 51.673\n",
-      "-0.085 -0.085 52.426\n",
-      "-0.08 -0.08 53.177\n",
-      "-0.075 -0.075 53.926\n",
-      "-0.07 -0.07 54.672\n",
-      "-0.065 -0.065 55.417\n",
-      "-0.06 -0.06 56.16\n",
-      "-0.055 -0.055 56.902\n",
-      "-0.05 -0.05 57.643\n",
-      "-0.045 -0.045 58.382\n",
-      "-0.04 -0.04 59.12\n",
-      "-0.035 -0.035 59.857\n",
-      "-0.03 -0.03 60.593\n",
-      "-0.025 -0.025 61.329\n",
-      "-0.02 -0.02 62.064\n",
-      "-0.015 -0.015 62.798\n",
-      "-0.01 -0.01 63.532\n",
-      "-0.005 -0.005 64.266\n",
-      "0.0 0.0 65.0\n",
-      "0.005 0.005 65.734\n",
-      "0.01 0.01 66.468\n",
-      "0.015 0.015 67.202\n",
-      "0.02 0.02 67.936\n",
-      "0.025 0.025 68.671\n",
-      "0.03 0.03 69.407\n",
-      "0.035 0.035 70.143\n",
-      "0.04 0.04 70.88\n",
-      "0.045 0.045 71.618\n",
-      "0.05 0.05 72.357\n",
-      "0.055 0.055 73.098\n",
-      "0.06 0.06 73.84\n",
-      "0.065 0.065 74.583\n",
-      "0.07 0.07 75.328\n",
-      "0.075 0.075 76.074\n",
-      "0.08 0.08 76.823\n",
-      "0.085 0.085 77.574\n",
-      "0.09 0.09 78.327\n",
-      "0.095 0.095 79.082\n",
-      "0.1 0.1 79.839\n",
-      "0.105 0.105 80.6\n",
-      "0.11 0.11 81.363\n",
-      "0.115 0.115 82.129\n",
-      "0.12 0.12 82.899\n",
-      "0.125 0.125 83.671\n",
-      "0.13 0.13 84.448\n",
-      "0.135 0.135 85.228\n",
-      "0.14 0.14 86.012\n",
-      "0.145 0.145 86.8\n",
-      "0.15 0.15 87.592\n",
-      "0.155 0.155 88.389\n",
-      "0.16 0.16 89.191\n",
-      "0.165 0.165 89.998\n",
-      "0.17 0.17 90.81\n",
-      "0.175 0.175 91.628\n",
-      "0.18 0.18 92.452\n",
-      "0.185 0.185 93.282\n",
-      "0.19 0.19 94.118\n",
-      "0.195 0.195 94.962\n",
-      "0.2 0.2 95.812\n",
-      "0.205 0.205 96.67\n",
-      "0.21 0.21 97.536\n",
-      "0.215 0.215 98.411\n",
-      "0.22 0.22 99.294\n",
-      "0.225 0.225 100.187\n",
-      "0.23 0.23 101.09\n",
-      "0.235 0.235 102.003\n",
-      "0.24 0.24 102.928\n",
-      "0.245 0.245 103.864\n",
-      "0.25 0.25 104.813\n",
-      "0.255 0.255 105.775\n",
-      "0.26 0.26 106.751\n",
-      "0.265 0.265 107.742\n",
-      "0.27 0.27 108.749\n",
-      "0.275 0.275 109.774\n",
-      "0.28 0.28 110.817\n",
-      "0.285 0.285 111.88\n",
-      "0.29 0.29 112.964\n",
-      "0.295 0.295 114.072\n",
-      "0.3 0.3 115.205\n",
-      "0.305 0.305 116.365\n",
-      "0.31 0.31 117.556\n",
-      "0.315 0.315 118.78\n",
-      "0.32 0.32 120.041\n",
-      "0.325 0.325 121.342\n",
-      "0.33 0.33 122.69\n",
-      "0.335 0.335 124.09\n",
-      "0.34 0.34 125.55\n",
-      "0.345 0.345 127.078\n"
+      "-0.45 0 16.378\n",
+      "-0.4 0 22.895\n",
+      "-0.35 0 28.823999999999998\n",
+      "-0.3 0 34.352000000000004\n",
+      "-0.25 0 39.594\n",
+      "-0.2 0 44.629000000000005\n",
+      "-0.15 0 49.515\n",
+      "-0.1 0 54.297000000000004\n",
+      "-0.05 0 59.015\n",
+      "-0.0 0 63.7\n",
+      "0.05 0 68.385\n",
+      "0.1 0 73.10300000000001\n",
+      "0.15 0 77.885\n",
+      "0.2 0 82.771\n",
+      "0.25 0 87.806\n",
+      "0.3 0 93.048\n",
+      "0.35 0 98.57600000000001\n",
+      "0.4 0 104.50500000000001\n",
+      "0.45 0 111.022\n"
      ]
     }
    ],
    "source": [
     "## (1,1)\n",
     "\n",
-    "for q in np.arange(-0.345,0.35,0.005):\n",
-    "    qIn = vectorSum(ar,br,(180 - lattice[5])) * q\n",
+    "for q in np.arange(-0.45,0.45+0.01,0.05):\n",
+    "    qIn = q*ar\n",
     "    theta = adressTheta(qInToth(energy, twoTheta, qIn), twoTheta)\n",
-    "    print(np.round(q,3),np.round(q,3),np.round(theta,3))"
+    "    print(np.round(q,3),0,np.round(theta,3)-1.3)"
    ]
   },
   {
@@ -386,9 +266,6 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "ac59ebe37160ed0dfa835113d9b8498d9f09ceb179beaac4002f036b9467c963"
-  },
   "kernelspec": {
    "display_name": "Python 3.9.5 64-bit",
    "language": "python",
@@ -406,7 +283,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.5"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "11938c6bc6919ae2720b4d5011047913343b08a43b18698fd82dedb0d4417594"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
