--- a/live/OnlinePlot.ipynb
+++ b/live/OnlinePlot.ipynb
@@ -101,7 +101,7 @@
     "    \n",
     "    return xdata,tempData\n",
     "\n",
-    "def get_scan(scans,zeroType='peak',peakHeight=10,peakWidth=3):\n",
+    "def combine_rixs(scans,zeroType='peak',peakHeight=10,peakWidth=3):\n",
     "    for i,scanNumber in enumerate(scans):\n",
     "        if i == 0:\n",
     "            xdata,ydata = get_rixs(scanNumber,zeroType=zeroType,peakHeight=peakHeight,peakWidth=peakWidth)\n",
@@ -145,7 +145,7 @@
    "outputs": [],
    "source": [
     "fig = figure()\n",
-    "X,Y=get_scan([105,106])\n",
+    "X,Y=combine_rixs([105,106])\n",
     "plot(X,Y);"
    ]
   }
