--- a/calQ.ipynb
+++ b/calQ.ipynb
@@ -79,28 +79,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "twoTheta = 130\n",
-    "energy = 708\n",
+    "energy = 1240\n",
     "\n",
-    "lattice = [6.8275, 6.8275, 20.5619, 90, 90, 120]\n",
+    "lattice = [4.985, 4.985, 4.049, 90, 90, 120]\n",
     "ar, br, cr = invertedframe(lattice)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5014052433089051\n",
-      "0.28948645219748614\n"
+      "0.6411811594001628\n",
+      "0.3701861149790004\n",
+      "0.4210750576929364\n"
      ]
     }
    ],
@@ -119,21 +120,25 @@
     "q = qIn / vectorSum(ar, br, (180 - lattice[5]))\n",
     "print(q)\n",
     "\n",
+    "# (0,0,1)\n",
+    "q = qOut / cr\n",
+    "print(q)\n",
+    "\n",
     "#(H,K)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "112.78554983911678\n",
-      "96.58131692786117\n",
-      "131.41811427018177\n"
+      "95.73225500969838\n",
+      "91.26747893113989\n",
+      "115.75827177944413\n"
      ]
     }
    ],
