--- a/live/! ScanInformation.ipynb
+++ b/live/! ScanInformation.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = 'X:/RIXS/Asmara/RIXS/'\n",
+    "path = 'X:/RIXS/Asmara/'\n",
     "base = 'O'"
    ]
   },
@@ -46,8 +46,10 @@
     "    \"ExitSlit\",\n",
     "    \"BeamCurrent\",\n",
     "    ]\n",
-    "RIXSinfo = pd.DataFrame(columns = ['FileName'] + useful_strings)\n",
-    "file_exist = []"
+    "try:\n",
+    "    RIXSinfo\n",
+    "except NameError:\n",
+    "    RIXSinfo = pd.DataFrame(columns = ['FileName'] + useful_strings)"
    ]
   },
   {
@@ -68,14 +70,13 @@
     "        Polarization = \"C-\"\n",
     "    return Polarization\n",
     "\n",
-    "def load_meta(runNo):\n",
-    "    global path\n",
-    "    global base\n",
+    "def load_meta(file_name,path=path):\n",
     "    global useful_strings\n",
-    "    f = h5py.File(f\"{path}/{base}_{runNo:04d}_d1.h5\",'r')\n",
+    "    f = h5py.File(f\"{path}/RIXS/{file_name}_d1.h5\",'r')\n",
     "    meta_data = {}\n",
     "    NDAttributes = f['entry']['instrument']['NDAttributes']\n",
-    "    meta_data['FileName'] = f\"{base}_{runNo:04d}\"\n",
+    "    meta_data['FileName'] = file_name\n",
+    "    f.close()\n",
     "    for key in useful_strings:\n",
     "        meta_data[key] = round(np.mean(NDAttributes[key]),3)                    \n",
     "    meta_data[\"PolarMode\"] = polar_trans(meta_data[\"PolarMode\"])                                             \n",
@@ -89,20 +90,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def scan_information(run_list,df=RIXSinfo):\n",
-    "    global useful_strings\n",
-    "    global file_exist\n",
+    "def scan_information(run_list,base=base):\n",
+    "    global RIXSinfo\n",
     "    for runNo in run_list:\n",
-    "        if runNo not in file_exist:\n",
+    "        file_name = f\"{base}_{runNo:04d}\"\n",
+    "        if file_name not in RIXSinfo[\"FileName\"].values:\n",
     "            try:\n",
-    "                meta_data = load_meta(runNo)\n",
-    "                df = df.append(meta_data,ignore_index = True)\n",
-    "                file_exist = file_exist + [runNo]\n",
+    "                meta_data = load_meta(file_name)\n",
+    "                RIXSinfo = RIXSinfo.append(meta_data,ignore_index = True)\n",
     "            except:\n",
-    "                pass\n",
-    "    df.sort_values(\"FileName\",inplace = True)\n",
-    "    return df\n",
-    "        "
+    "                break\n",
+    "    RIXSinfo.sort_values(\"FileName\",inplace = True,ignore_index = True)\n",
+    "    return RIXSinfo"
    ]
   },
   {
@@ -112,7 +111,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RIXSinfo = scan_information(range(0,30))"
+    "RIXSinfo = scan_information(range(1,30))"
    ]
   },
   {
@@ -742,13 +741,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "e4feb698-e1da-4e91-9a08-208beb48ba32",
    "metadata": {},
    "outputs": [],
    "source": [
-    "RIXSinfo.to_csv(f\"{path}/logbook.csv\") "
+    "# RIXSinfo.to_csv(f\"{path}/logbook.csv\",index=False) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91d863f9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
