--- a/voila/EnergyDrift-voila.ipynb
+++ b/voila/EnergyDrift-voila.ipynb
@@ -51,11 +51,11 @@
     "    global base\n",
     "    \n",
     "    if scannumber < 10:\n",
-    "        filename = mypath+'\\\\RIXS\\\\'+base+\"_\"+\"000\"+str(scannumber)\n",
+    "        filename = mypath+'\\\\'+base+\"_\"+\"000\"+str(scannumber)\n",
     "    elif scannumber < 100:\n",
-    "        filename = mypath+'\\\\RIXS\\\\'+base+\"_\"+\"00\"+str(scannumber)\n",
+    "        filename = mypath+'\\\\'+base+\"_\"+\"00\"+str(scannumber)\n",
     "    elif scannumber < 1000:    \n",
-    "        filename = mypath+'\\\\RIXS\\\\'+base+\"_\"+\"0\"+str(scannumber)\n",
+    "        filename = mypath+'\\\\'+base+\"_\"+\"0\"+str(scannumber)\n",
     "    else:    \n",
     "        filename = mypath+base+\"_\"+str(scannumber)\n",
     "\n",
@@ -226,7 +226,9 @@
     "display(scan)\n",
     "\n",
     "plot = widgets.Button(description=\"Plot\")\n",
-    "output = widgets.Output()"
+    "output = widgets.Output()\n",
+    "\n",
+    "display(plot,output)"
    ]
   },
   {
@@ -235,7 +237,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(plot,output)\n",
     "def on_button_clicked(b):\n",
     "    output.clear_output()\n",
     "\n",
@@ -259,7 +260,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.5 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -274,6 +275,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "11938c6bc6919ae2720b4d5011047913343b08a43b18698fd82dedb0d4417594"
+   }
   }
  },
  "nbformat": 4,
