--- a/live/! OnlineAnalysis.ipynb
+++ b/live/! OnlineAnalysis.ipynb
@@ -142,12 +142,12 @@
     "    tempdata = ccd1 + ccd2 + ccd3\n",
     "\n",
     "    #     shift automaticlly\n",
-    "    # xdata, tempdata = elastic_shift(ccd1 + ccd2 + ccd3)\n",
+    "    # xdata, tempdata = elastic_shift(tempdata)\n",
     "\n",
     "    return xdata, tempdata\n",
     "\n",
     "\n",
-    "def combine_rixs(scans):\n",
+    "def load_runs(scans):\n",
     "\n",
     "    for i, scan_number in enumerate(scans):\n",
     "        if i == 0:\n",
@@ -317,8 +317,15 @@
    ],
    "source": [
     "figure()\n",
-    "X, Y = combine_rixs([18, 19, 20, 21])\n",
+    "X, Y = load_runs([18, 19, 20, 21])\n",
     "plot(X, Y)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# shift zero energy manually"
    ]
   },
   {
@@ -326,7 +333,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "figure()\n",
+    "X, Y = elastic_shift(Y,zeropixel=1200)\n",
+    "plot(X, Y)"
+   ]
   }
  ],
  "metadata": {
