--- a/calQ.ipynb
+++ b/calQ.ipynb
@@ -79,12 +79,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "twoTheta = 130\n",
-    "energy = 1240\n",
+    "energy = 708\n",
     "\n",
     "lattice = [4.985, 4.985, 4.049, 90, 90, 120]\n",
     "ar, br, cr = invertedframe(lattice)"
@@ -92,16 +92,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6411811594001628\n",
-      "0.3701861149790004\n",
-      "0.4210750576929364\n"
+      "2.7365832324535487e-17\n",
+      "0.4191599578354105\n"
      ]
     }
    ],
@@ -109,7 +108,7 @@
     "# alpha = 10\n",
     "# qIn, qOut = project(energy, twoTheta, alpha)\n",
     "\n",
-    "theta = 120\n",
+    "theta = 65\n",
     "qIn, qOut = thToq(energy, twoTheta, adressTheta(theta, twoTheta))\n",
     "\n",
     "# (1,0)\n",
@@ -117,8 +116,8 @@
     "print(q)\n",
     "\n",
     "# (1,1)\n",
-    "q = qIn / vectorSum(ar, br, (180 - lattice[5]))\n",
-    "print(q)\n",
+    "# q = qIn / vectorSum(ar, br, (180 - lattice[5]))\n",
+    "# print(q)\n",
     "\n",
     "# (0,0,1)\n",
     "q = qOut / cr\n",
@@ -153,10 +152,10 @@
     "print(theta)\n",
     "\n",
     "#(1,1)\n",
-    "q=0.2\n",
-    "qIn = vectorSum(ar,br,(180 - lattice[5])) * q\n",
-    "theta = adressTheta(qInToth(energy, twoTheta, qIn), twoTheta)\n",
-    "print(theta)\n",
+    "# q=0.2\n",
+    "# qIn = vectorSum(ar,br,(180 - lattice[5])) * q\n",
+    "# theta = adressTheta(qInToth(energy, twoTheta, qIn), twoTheta)\n",
+    "# print(theta)\n",
     "\n",
     "#(H,K)\n",
     "q=[0.35,0.35]\n",
