--- a/voila/rixsplot.ipynb
+++ b/voila/rixsplot.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib widget\n",
+    "%matplotlib ipympl\n",
     "\n",
     "import h5py\n",
     "import numpy as np\n",
@@ -188,7 +188,7 @@
     "    ax.cla()\n",
     "    for key in data:\n",
     "        ax.plot(data[key])\n",
-    "    fig.update()\n",
+    "    fig.canvas.toolbar.update()\n",
     "\n",
     "bload.on_click(do_load)\n",
     "\n",
@@ -204,7 +204,7 @@
     "    for key in data:\n",
     "        ax.plot(data[key])\n",
     "    ax.set_xlim(xrange)\n",
-    "    fig.update()\n",
+    "    fig.canvas.toolbar.update()\n",
     "\n",
     "bxcorr.on_click(do_xcorr)\n",
     "\n",
@@ -219,7 +219,7 @@
     "    xdata = np.arange(len(ydata))\n",
     "    ax.cla()\n",
     "    ax.plot(xdata,ydata)\n",
-    "    fig.update()\n",
+    "    fig.canvas.toolbar.update()\n",
     "    \n",
     "bsum.on_click(do_sum)\n",
     "\n",
@@ -228,7 +228,7 @@
     "    xdata = xdata - zero.value\n",
     "    ax.cla()\n",
     "    ax.plot(xdata,ydata)\n",
-    "    fig.update()\n",
+    "    fig.canvas.toolbar.update()\n",
     "    \n",
     "bzero.on_click(do_zero)\n",
     "\n",
@@ -237,7 +237,7 @@
     "    xdata = xdata * disp.value\n",
     "    ax.cla()\n",
     "    ax.plot(xdata,ydata)\n",
-    "    fig.update()\n",
+    "    fig.canvas.toolbar.update()\n",
     "    \n",
     "bdisp.on_click(do_disp)\n",
     "\n",
