--- a/plotRIXS.ipynb
+++ b/plotRIXS.ipynb
@@ -123,6 +123,7 @@
     "    lags = signal.correlation_lags(len(refInt[peaks[-1]-1000:peaks[-1]+500]), len(uncorrInt[peaks[-1]-1000:peaks[-1]+500]))\n",
     "    lag = lags[np.argmax(corr)]\n",
     "\n",
+    "    # back to original\n",
     "    corrInt = np.roll(uncorrInt, lag)\n",
     "\n",
     "    f3 = interpolate.interp1d(xAxisNew,corrInt,kind='linear',fill_value=\"extrapolate\")\n",
