--- a/live/! OnlineAnalysis.ipynb
+++ b/live/! OnlineAnalysis.ipynb
@@ -169,6 +169,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_map(run_list. X = None):\n",
+    "    x_num = len(run_list)\n",
+    "    data = np.zeros(x_num,2200)\n",
+    "    for i,runs in enumerate(run_list):\n",
+    "        if type(runs) is list:\n",
+    "            Y,d = load_rixs([runs])\n",
+    "        else:\n",
+    "            Y,d = load_rixs(runs)\n",
+    "        data[i,:] = Y\n",
+    "    X = np.arrange(x_num)\n",
+    "    fig, ax = plt.subplots()\n",
+    "    ax.pcolorfast(X,Y,data)\n",
+    "\n",
+    "    return X,Y,data"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
