--- a/live/! OnlineAnalysis_v1.ipynb
+++ b/live/! OnlineAnalysis_v1.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "project_path = \"X:/Asmara/\"\n",
     "base_atom = \"O\"\n",
-    "elastic_line = [1, 0] #[energy_per_pixel, energy_zero]"
+    "energy_dispersion = 0.00457  # eV/subpixel\n"
    ]
   },
   {
@@ -93,7 +93,6 @@
    "outputs": [],
    "source": [
     "def x_corr(refData, uncorrData):\n",
-    "\n",
     "    corr = correlate(refData, uncorrData)\n",
     "    lag = np.argmax(corr)\n",
     "    corrData = np.roll(uncorrData, lag)\n",
@@ -101,14 +100,28 @@
     "    return corrData\n",
     "\n",
     "\n",
-    "def elastic_shift(xdata_pixel, ei = None, el = elastic_line):\n",
-    "    \n",
-    "    if ei = None:\n",
-    "        xdata_energy = xdata_pixel * el[0] + el[1]\n",
-    "    else:\n",
-    "        xdata_energy = xdata_pixel * el[0] + el[1] - ei\n",
+    "def elastic_shift(\n",
+    "    pixelData, zeropixel=None, height=10, width=3, enDisp=energy_dispersion\n",
+    "):\n",
+    "    xdataPixel = np.arange(len(pixelData))\n",
     "\n",
-    "    return xdata_energy\n"
+    "    if zeropixel == None:\n",
+    "        #     try to find peak\n",
+    "        peaks, _ = find_peaks(pixelData, height=height, width=width)\n",
+    "\n",
+    "        #     try to find peak with right edge\n",
+    "        # peaks = xdataPixel[pixelData>height]\n",
+    "\n",
+    "    else:\n",
+    "        peaks = [zeropixel]\n",
+    "\n",
+    "    # chop data\n",
+    "    xdataPixel = xdataPixel[(peaks[-1] - 2000) : (peaks[-1] + 200)]\n",
+    "    energyData = pixelData[(peaks[-1] - 2000) : (peaks[-1] + 200)]\n",
+    "\n",
+    "    xDataEnergy = (xdataPixel - peaks[-1]) * enDisp\n",
+    "\n",
+    "    return xDataEnergy, energyData"
    ]
   },
   {
@@ -125,19 +138,20 @@
     "\n",
     "    #    load raw data\n",
     "    xdata = np.arange(len(ccd2))\n",
-    "    tempdata = ccd1 + ccd2 + ccd3\n",
+    "    ydata = ccd1 + ccd2 + ccd3\n",
     "\n",
     "    #     shift automaticlly\n",
-    "    xdata, tempdata = elastic_shift(tempdata)\n",
+    "    xdata, ydata = elastic_shift(ydata)\n",
     "\n",
-    "    return xdata, tempdata\n",
+    "    return xdata, ydata\n",
     "\n",
     "\n",
-    "def load_rixs(scans, ei = None):\n",
+    "def load_rixs(scans):\n",
+    "\n",
     "    if type(scans) is int:\n",
     "        xdata,ydata = load_rix(scans)\n",
-    "# normalize data\n",
-    "        # sumdata = sumdata/3\n",
+    "        # normalize data\n",
+    "        # ydata = ydata/3\n",
     "    else:\n",
     "        for i, scan_number in enumerate(scans):\n",
     "            if i == 0:\n",
@@ -149,13 +163,13 @@
     "                onedata = x_corr(refdata, onedata)\n",
     "                ydata = ydata + onedata\n",
     "\n",
-    "# normalize data\n",
-    "        # sumdata = sumdata/len(scans)/3\n",
+    "        # normalize data\n",
+    "        # ydata = ydata/len(scans)/3\n",
     "    \n",
-    "# shift elastic peaks\n",
-    "    xdata = elastic_shift(xdata,ei)\n",
+    "    # shift elastic peaks\n",
+    "    # xdata = elastic_shift(ydata)\n",
     "\n",
-    "    return xdata, ydata\n"
+    "    return xdata, ydata"
    ]
   },
   {
@@ -166,7 +180,7 @@
    "source": [
     "def plot_map(run_list,Y = None):\n",
     "    run_num = len(run_list)\n",
-    "    data = np.zeros((run_num,4800))\n",
+    "    data = np.zeros((run_num,2200))\n",
     "    for i,runs in enumerate(run_list):\n",
     "        if type(runs) is list:\n",
     "            X,d = load_rixs(runs)\n",
@@ -180,7 +194,7 @@
     "    fig,ax = plt.subplots()\n",
     "    im = ax.pcolorfast(X,Y,data)\n",
     "    fig.colorbar(im)\n",
-    "    ax.set_xlabel('Energy emission ( eV )')\n",
+    "    ax.set_xlabel('Energy Loss ( eV )')\n",
     "    \n",
     "    return fig,ax,im\n",
     "        "
@@ -256,7 +270,7 @@
    "outputs": [],
    "source": [
     "run_list = range(16,26+1)\n",
-    "fig,ax,im = plot_map(run_list,Y=(526,536+1))\n",
+    "fig,ax,im = plot_map(run_list,Y=(526-0.5,536+0.5))\n",
     "im.set_clim(0,10)\n",
     "ax.set_ylabel('Photon Energy ( eV )')"
    ]
