--- a/live/! OnlineAnalysis_v2.ipynb
+++ b/live/! OnlineAnalysis_v2.ipynb
@@ -113,10 +113,8 @@
     "def elastic_shift(xdata_pixel, ydata_pixel, ei, el = elastic_line):\n",
     "    \n",
     "    if ei == None:\n",
-    "        peaks, _ = find_peaks(ydata_pixel, height=10, width=3)\n",
-    "        xdata_energy = (xdata_pixel[(peaks[-1] - 2000) : (peaks[-1] + 200)] - peaks[-1]) * el[0]\n",
-    "        ydata_energy = ydata_pixel[(peaks[-1] - 2000) : (peaks[-1] + 200)]\n",
-    "\n",
+    "        xdata_energy = xdata_pixel * el[0] + el[1]\n",
+    "        ydata_energy = ydata_pixel\n",
     "    else:\n",
     "        xdata_energy = xdata_pixel * el[0] + el[1] - ei\n",
     "        \n",
