--- a/main.ipynb
+++ b/main.ipynb
@@ -21,7 +21,7 @@
     "project_path = r\"X:/RIXS/Asmara\"\n",
     "base_atom = \"O\"\n",
     "energy_dispersion = 0.00457\n",
-    "rixs = adress_rixs(path=project_path, base=base_atom, dispersion=energy_dispersion)"
+    "ar = adress_rixs(path=project_path, base=base_atom, dispersion=energy_dispersion)"
    ]
   },
   {
@@ -56,7 +56,7 @@
     }
    ],
    "source": [
-    "x,y = rixs.load_rixs(16,17,18,19,20)\n",
+    "x,y = ar.load_rixs(16,17,18,19,20)\n",
     "\n",
     "plt.figure()\n",
     "plt.plot(x,y)\n",
