--- a/main.ipynb
+++ b/main.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib ipympl\n",
+    "%matplotlib widget\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from adress_rixs import adress_rixs"
@@ -18,10 +18,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "project_path = r\"X:/RIXS/Asmara\"\n",
-    "base_atom = \"O\"\n",
-    "energy_dispersion = 0.00457\n",
-    "ar = adress_rixs(path=project_path, base=base_atom, dispersion=energy_dispersion)"
+    "ar = adress_rixs(\n",
+    "    path=r\"X:/RIXS/Asmara\", \n",
+    "    base=\"O\", \n",
+    "    dispersion=0.00457,\n",
+    "    )"
    ]
   },
   {
